# btc-cycle-timer

./: .env.example  .gitattributes  .gitignore  API.md  README.md  cycle_analysis_test.json  pyproject.toml  requirements.txt  run_monitoring.py  run_tests.py  test_cycle_functionality.py
btc_cycle_timer/: __init__.py  __main__.py  app.py  calc.py  chart.py  config.py  console.py  cycle_analysis.py  cycle_manager.py  dynamic_predictor.py  forecast_updater.py  logger.py  main.py  ml_predictor.py  monitoring.py  price.py  status.py  telegram.py  timer.py  utils.py
btc_cycle_timer/data/: btc_price_2017.csv  btc_price_2018.csv  btc_price_2019.csv  btc_price_2020.csv  btc_price_2021.csv  btc_price_2022.csv  btc_price_2023.csv  btc_price_2024.csv  btc_price_2025.csv
btc_cycle_timer/lang/: en.json  fr.json  ua.json
btc_cycle_timer/models/: btc_scaler.joblib  dynamic_gradient_boosting.joblib  dynamic_linear.joblib  dynamic_predictions_history.json  dynamic_scalers.joblib
btc_cycle_timer/tests/: test_timer.py
tests/: report.md  test_advanced.py  test_cycle_management.py  test_timer.py
