[project]
name = "btc-cycle-timer"
version = "0.1.1"
description = "BTC 4-Year Cycle Timer"
authors = [
    { name = "Ігор Кушнерук", email = "kushneruk.igor@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "plotly",
    "pandas",
    "rich",
    "requests",
    "python-dotenv",
    "python-dateutil"
]

[project.scripts]
btc-cycle = "btc_cycle_timer.__main__:main"

[tool.pytest.ini_options]
addopts = "--md-report tests/report.md"

